Mon Mar 11 15:05:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/libgnustep-gui.def
	(__objc_class_name_GSGlyphLocation,__objc_class_name_GSLineLayoutInfo,
	__objc_class_name_GSRunStorage, __objc_class_name__GSRunSearchKey,
	__objc_class_name_GSTextContainerLayoutInfo): Removed (Suggested
	by Fred Kiefer).

2002-03-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Start gpbs for other server automatically.
	Improve log messages.
	* Tools/gpbs.m copied in fron gpbs.

2002-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Use NSHost to look for alternative servers.
	* Tools/gpbs.m: Use -NSHost to specify alternative server names.

Sat Mar  9 12:22:05 2002  Adam Fedor  <fedor@yogi.doc.com>

	* Source/GSSimpleLayoutManager.m:
 	Check that object is not nil before asking for width (assigning
 	structs from nil objects crashes Solaris). Several locations.

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScrollView.m: Go through adding checks to avoid crashes
	where _contentView has been set to nil through removal of the
	subview.

Thu Mar  7 08:29:25 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSScrollView.m ([-dealloc]): Use DESTROY, not
	TEST_RELEASE, fixing the segmentation fault on deallocating.

Thu Mar  7 08:15:21 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCell.m ([-initTextCell:]): Use system font, not user
	font.  ([-initImageCell:]): Idem.  ([-setType:]): Idem.
	(Patch from Stefan Urbanek <stefanurbanek@yahoo.fr>).
	
2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTextStorage.m: Applied fix for left-over attributes
	at end of string.  Patch supplied by Alexander Malmberg
	<alexander@malmberg.org>.  Reformatting to conform to GNUstep
	standards, and optimisation by me.
	* Source/NSView.m: -dealloc remove subviews from this view as
	suggested by Nicola.

2002-03-05  Gregory John Casamento <greg_casamento@yahoo.com>
