@@ -1,3 +1,9 @@
+2002-03-14  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/AppKit/NSGraphicsContext.h: Add NSWindowDepth typedef and
+	reposition STRICT_OPENSTEP.  Really needs someone who actually wants
+	to use this option to submit patches though.
+
 Mon Mar 11 15:05:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/libgnustep-gui.def
